Added some modifications in the login page

--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -24,7 +24,7 @@
 }
 
 .sidebar ul li {
-  margin: 15px 0; /* Margin between items */
+  margin: 15spx 0; /* Margin between items */
 }
 
 .sidebar ul li a {
