--- a/src/login.css
+++ b/src/login.css
@@ -1,22 +1,20 @@
-/* login.css */
-
 body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0; /* Light background */
+    background-color: #f0f0f0;
 }
 
 .login-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Full viewport height */
+    height: 100vh;
 }
 
 .login-form {
     background-color: white;
-    padding: 2rem;
+    padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width: 100%;
@@ -42,20 +40,21 @@ input {
     border-radius: 5px; /* Rounded corners */
     font-size: 1rem;
 }
-
 .password-container {
-    position:relative; /* For positioning the toggle button */
+    position: relative; /* Enables absolute positioning for the toggle button */
+    width: 95%; /* Full width for password container */
 }
 
 .toggle-password {
     position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
+    right: 10px; /* Position the button 10px from the right */
+    top: 70%; /* Align vertically to the middle */
+    transform: translateY(-50%); /* Center vertically */
     background: none;
     border: none;
     color: #007BFF; /* Bootstrap primary color */
     cursor: pointer; /* Pointer cursor */
+    font-size: 1rem; /* Optional: adjust font size for better visibility */
 }
 
 .submit-button {
