--- a/src/RegisterPage.css
+++ b/src/RegisterPage.css
@@ -40,7 +40,7 @@ body {
   width: 100px; /* Set width */
   height: 100px; /* Set height */
   border-radius: 50%; /* Make it circular */
-  object-fit: cover; /* Cover the area while maintaining aspect ratio */
+  object-fit: fill; /* Cover the area while maintaining aspect ratio */
   border: 2px solid #2193b0; /* Optional: add a border around the avatar */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* Optional: add a shadow for depth */
 }
