Made many modifications in the 4 files

--- a/src/bill.css
+++ b/src/bill.css
@@ -7,3 +7,11 @@
 .bill-details {
     margin-top: 20px;
 }
+
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+}
