--- a/src/navbar.css
+++ b/src/navbar.css
@@ -1,13 +1,14 @@
 /* navbar.css */
 .navbar {
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
     background-color: #007bff;
     color: white;
-    padding: 10px 20px;
-    position: relative; /* Add this for proper positioning */
-    margin: 0; /* Ensure there's no margin */
+    position: relative;
+    margin: 0;
+    padding: 0px;
+    height: 7.5vh;
 }
 
 .sidebar-toggle {
@@ -15,11 +16,12 @@
     border: none;
     color: black;
     cursor: pointer;
-    font-size: 24px; /* Adjust size as needed */
+    font-size: 18px;
+    margin-left: 20px;
 }
 
 .navbar h1 {
-    flex: 1; /* This allows the title to take up the remaining space */
-    text-align: center; /* Center the title */
-    margin: 0; /* Remove default margin */
+    margin: auto;
+    text-align: center;
+    padding-right: 70px;
 }
