--- a/src/RegisterPage.css
+++ b/src/RegisterPage.css
@@ -1,17 +1,16 @@
 body {
   font-family: 'Arial', sans-serif;
-  margin: 0;
+  margin:0;
   padding: 0;
   background: linear-gradient(135deg, rgba(13, 250, 231, 0.5), rgba(239, 103, 6, 0.5));
-  /* display: flex; */
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
 
-
 .register-page {
-  max-height: 85vh; /* Set maximum height to 90% of the viewport height */
+  padding-top: 1rem;
+  max-height: 90vh; /* Set maximum height to 90% of the viewport height */
   overflow-y: auto; /* Enable vertical scrolling */
   overflow-x: hidden; /* Hide horizontal overflow */
   padding: 40px; /* Increased padding for spacious layout */
