--- a/src/navbar.css
+++ b/src/navbar.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, rgba(13, 250, 231, 0.5), rgba(239, 103, 6, 0.5));
+    background: linear-gradient( #757F9A, #D7DDE8);
     position: relative;
     margin: 0;
     padding: 0px;
