--- a/src/profile.css
+++ b/src/profile.css
@@ -31,6 +31,9 @@ body {
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2); /* Sidebar shadow effect */
     height: 100%; /* Full height */
     font-family: Arial, Helvetica, sans-serif;
+    z-index: 1000; /* Ensure the sidebar is on top of other elements */
+    transition: transform 0.3s ease-in-out; /* Smooth slide-in effect */
+  
 }
 
 .sidebar-toggle {
