--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,18 +1,25 @@
-.sidebar {
-  width: 250px; /* Fixed width of the sidebar */
-  background-color: #2c3e50; /* Dark background color */
-  color: white; /* White text color */
-  height: 100vh; /* Full height */
-  padding: 20px; /* Padding around the content */
-  position: absolute; /* Fix the sidebar on the left */
-  top: 0.1px; /* Align to the top */
-  left: 0.1px; /* Align to the left */
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2); /* Shadow effect */
-  transition: width 0.3s ease; /* Smooth width transition */
-  z-index: 1000; 
-  height: fit-content;
-
+.sidebar-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 250px;
+  height: 100%;
+  background-color: #f8f9fa;
+  z-index: 1000;
+  box-shadow: 2px 0px 5px rgba(0,0,0,0.5);
 }
+
+.sidebar-toggle {
+  background-color: transparent;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  position: absolute;
+  top: 0.5rem;
+  left: 0px;
+  z-index: 1100;
+}
+
 
 .sidebar h2 {
   margin-top: 1rem; /* Remove margin */
