--- a/src/login.css
+++ b/src/login.css
@@ -1,3 +1,4 @@
+/* Body styling */
 body {
     margin: 0;
     padding: 0;
@@ -12,7 +13,6 @@ body {
     height: 100vh;
     padding-left: 10px;
     padding-right: 10px;
-    padding-top: -20px;
 }
 
 .login-form {
@@ -44,10 +44,10 @@ input {
     font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 .password-container {
     position: relative;
     width: 94%;
-   
 }
 
 .toggle-password {
@@ -60,7 +60,7 @@ input {
     color: #007BFF;
     cursor: pointer;
     font-size: 1rem;
-    right:0px
+    right: 0px;
 }
 
 .submit-button {
@@ -74,19 +74,35 @@ input {
     cursor: pointer;
     transition: background-color 0.3s;
     width: 100%;
+    margin-bottom: 20px; /* Adds space between login and reset password buttons */
 }
 
 .submit-button:hover {
     background-color: #45a049;
 }
-.error-message {
-    color: red;
-    font-size: 0.9rem;
-    margin-top: 10px;
-    animation: slideDown 0.5s ease-out;
-  }
+.reset-prompt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px; /* Adjust spacing from above */
+}
+.reset-link {
+    color: #007BFF; /* Same color as the signup link */
+    text-decoration: none; /* Remove underline */
+    font-size: 0.85rem; /* Same font size */
+    cursor: pointer; /* Pointer cursor on hover */
+    margin-left: 5px; /* Space between the text and link */
+}
+
+.reset-link:hover {
+    text-decoration: underline; /* Underline on hover for better visibility */
+}
+
+
+
 .signup-prompt {
     margin-top: 20px;
+    font-size: 1.1rem; /* Increase font size for sign up prompt */
 }
 
 .signup-link {
